#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-39
2022-05-02 Mikhail Dubrovin
modified:
   examples/test-issues-2022.py - add issue_2022_05_02
   src/AreaDetector.py - path kwargs['rms'] to self.pyda.common_mode_apply(_cmpars, nda, **kwargs),
	use kwargs['mbits'] for calib_jungfrau/epix10ka only
   src/PyDetectorAccess.py - fix positional parameters for pyimgalgos: cm_epix

Tag: V02-00-38
2022-04-28 Mikhail Dubrovin
- modified:
   app/epix10ka_deploy_constants - add boolean parameter -E, or --errskip, change d_logmode to INFO
   app/jungfrau_deploy_constants - add boolean parameter -E, or --errskip
   src/UtilsEpix10kaCalib.py - use parameter errskip add/use method check_exists
   src/UtilsJungfrauCalib.py - use parameter errskip add/use method check_exists
   examples/test-issues-2022.py - in issue_2022_04_26 add Silke's dataset cxilx8720 run6
   src/PyDetectorAccess.py - in get_constants remove void parameter use_repo

2022-04-26 Mikhail Dubrovin
- examples/test-issues-2021.py - correction of comments
- examples/test-issues-2022.py - add issue_2022_04_20, issue_2022_04_26

Tag: V02-00-37
2022-03-28 Mikhail Dubrovin
   app/epix10ka_deploy_constants, epix10ka_offset_calibration, epix10ka_pedestals_calibration
      jungfrau_dark_proc, jungfrau_deploy_constants - add repoman=RepoManager and repoman.save_record_at_start
   app/geometry_deploy_constants
   src/UtilsEpix10kaCalib.py, UtilsJungfrauCalib.py - remove save_log_record_at_start from script algorithm

Tag: V02-00-36
2022-03-24 Mikhail Dubrovin
modified:
   app/geometry_deploy_constants - add command geometry_deploy_constants
   src/UtilsGeometryDeploy.py
   src/UtilsCalib.py - add ave_record_at_start and associated methods to class RepoManager
   src/UtilsEpix10kaCalib.py - code cleaning