@@ -142,8 +142,8 @@ def save_ndarray_in_textfile(nda, fname, fmode, fmt):
     logger.debug('saved: %s fmode: %s fmt: %s' % (fname, oct(fmode), fmt))
 
 
-def file_name_prefix(panel_type, panel_id, tstamp, exp, irun, fname_aliases):
-    panel_alias = alias_for_id(panel_id, fname=fname_aliases, exp=exp, run=irun)
+def file_name_prefix(panel_type, panel_id, tstamp, exp, irun, fname_aliases, **kwa):
+    panel_alias = alias_for_id(panel_id, fname=fname_aliases, exp=exp, run=irun, **kwa)
     return '%s_%s_%s_%s_r%04d' % (panel_type, panel_alias, tstamp, exp, irun), panel_alias
 
 
@@ -898,7 +898,7 @@ def common_mode_pars(src, arr_ave, arr_rms, arr_msk):
 
 def find_file_for_timestamp(dirname, pattern, tstamp):
     # list of file names in directory, dirname, containing pattern
-    fnames = [name for name in os.listdir(dirname) if os.path.splitext(name)[-1] in ('.dat','.data') and pattern in name]
+    fnames = [name for name in os.listdir(dirname) if os.path.splitext(name)[-1] in ('.txt','.dat','.data') and pattern in name]
 
     # list of int tstamps
     # !!! here we assume specific name structure generated by file_name_prefix
