@@ -7,6 +7,18 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-40
+2022-06-09 Mikhail Dubrovin
+modified:
+ - add command app/deploy_constants
+ - UtilsCalib.py - in file_name_prefix add/pass **kwa, in find_file_for_timestamp add '.txt'
+ - add RepoManager.py, UtilsDeployConstants.py for app/deploy_constants
+
+2022-06-02 Mikhail Dubrovin
+modified:
+- EventCodeManager.py - fix issue reported by Silke when evt_codes is None
+- PyDetector.py - code cleaning
+
 Tag: V02-00-39
 2022-05-02 Mikhail Dubrovin
 modified:
